Rename files - clear cd4s

--- a/analysis/mvp/03_mvp_visualization_cd8.ipynb
+++ b/analysis/mvp/03_mvp_visualization_cd8.ipynb
@@ -354,16 +354,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7e2e65d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata[adata.obs['clone_id']=='2768.0'].obs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4ad7a8a4",
    "metadata": {
     "scrolled": true
@@ -675,6 +665,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2373225c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "binding_mode = 'binding_ct'\n",
+    "\n",
+    "for donor in adata.obs['donor'].unique():\n",
+    "    adata_donor = adata[adata.obs['donor']==donor]\n",
+    "    #axes = axes.reshape(-1)\n",
+    "    \n",
+    "    eps = adata_donor.obs[binding_mode].astype(str).value_counts().index.tolist()\n",
+    "    eps = [el.split('+') for el in eps if (el!='nan')]\n",
+    "    eps = list(set([el for sublist in eps for el in sublist]))\n",
+    "    \n",
+    "    ncols = len(eps)\n",
+    "    fig, axes = plt.subplots(nrows=1, ncols=ncols, figsize=(ncols * 5, 1 * 5))\n",
+    "    if type(axes) != np.ndarray:\n",
+    "        axes = [axes]\n",
+    "    for i, ep in enumerate(eps):\n",
+    "\n",
+    "        df_ep = adata_donor[adata_donor.obs[binding_mode].astype(str).str.contains(ep)].obs.copy()\n",
+    "        df_ep['Purity_umi'] = df_ep[ep] / df_ep['n_count_dextramer']\n",
+    "        df_ep = df_ep[['Purity_umi', ep, 'binding_ct', 'clone_id']]\n",
+    "        df_ep = df_ep[df_ep[ep].notna()]\n",
+    "\n",
+    "        if len(df_ep) == 0:\n",
+    "            continue\n",
+    "        \n",
+    "        sb.scatterplot(data=df_ep, x=ep, y='Purity_umi', ax=axes[i], hue='binding_ct')\n",
+    "\n",
+    "        if len(df_ep) > 1:\n",
+    "            corr, pval = stats.pearsonr(df_ep[ep].values, df_ep['Purity_umi'].values)\n",
+    "        else:\n",
+    "            corr, pval = np.nan, np.nan\n",
+    "        axes[i].set_title(f'{ep}\\ncorr: {corr:.2f}, pval: {pval:.2f}')\n",
+    "        axes[i].set_xlabel('UMI')\n",
+    "\n",
+    "    plt.suptitle(f'{donor} - UMI conts vs UMI Purity')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24b2a8fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata[adata.obs['binding_ct'].notna()].obs.groupby('donor')['clone_id'].nunique()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bd5e1515",
    "metadata": {},
@@ -909,13 +956,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "35a55816",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binding_mode = 'binding_ct'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9fca9c58",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
     "sc.pl.umap(adata, show=False, ax=ax)\n",
-    "sc.pl.umap(adata[adata.obs[binding_mode]=='LTDEMIAQY'], color='donor', show=False, ax=ax)\n",
+    "sc.pl.umap(adata[adata.obs[binding_mode]=='LTDEMIAQY'], color='donor', show=False, ax=ax,\n",
+    "          s=75)\n",
     "ax.set_title(f'LTD by donor {binding_mode}')\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -929,7 +987,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "df_tmp = adata[(adata.obs['binding_10x']=='LTDEMIAQY')\n",
+    "df_tmp = adata[(adata.obs[binding_mode]=='LTDEMIAQY')\n",
     "              & (adata.obs['clone_id']!='nan')].obs[['donor', 'clone_id']]\n",
     "df_tmp = df_tmp.groupby('donor')['clone_id'].value_counts().unstack().fillna(0)\n",
     "\n",
@@ -944,7 +1002,7 @@
     "\n",
     "n_cts_by_donor = (df_tmp>0).sum(axis=1)\n",
     "for i, (donor, n) in enumerate(n_cts_by_donor.items()):\n",
-    "    ax.text((i+0.5)/len(n_cts_by_donor), 0.95, f'n={n}', ha='center', \n",
+    "    ax.text((i+0.5)/len(n_cts_by_donor), 1, f'n={n}', ha='center', \n",
     "            transform=ax.transAxes)\n",
     "\n",
     "\n",
@@ -964,7 +1022,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(6, 6))\n",
-    "df_tmp = adata[(adata.obs['binding_10x']=='LTDEMIAQY')\n",
+    "df_tmp = adata[(adata.obs[binding_mode]=='LTDEMIAQY')\n",
     "              & (adata.obs['clone_id']!='nan')].obs[['donor', 'leiden']]\n",
     "df_tmp = df_tmp.groupby('donor')['leiden'].value_counts(normalize=True).unstack().fillna(0)\n",
     "\n",
@@ -1680,6 +1738,46 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1db2b160",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata[adata.obs['clone_id']=='1650.0'].obs['binding_ct']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f333fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata[adata.obs['FLRGRAYGL']>50].obs[['clone_id']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e38efdb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata[adata.obs['clone_id'].insin([])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccddd065",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata[adata.obs['binding_ct']=='LTDEMIAQY'].obs.groupby('donor')['clone_id'].value_counts()"
    ]
   },
   {
