--- a/analysis/mvp/03_mvp_visualization_cd8.ipynb
+++ b/analysis/mvp/03_mvp_visualization_cd8.ipynb
@@ -62,15 +62,16 @@
    "source": [
     "path_figs = '../../figures/mvp/'\n",
     "\n",
-    "sc.settings.set_figure_params(dpi=360)\n",
+    "sc.settings.set_figure_params(dpi=600)\n",
     "sc._settings.ScanpyConfig(figdir=path_figs)\n",
     "sc.settings.verbosity = 3\n",
     "sc.set_figure_params(vector_friendly=True, color_map='viridis', transparent=True)\n",
     "sb.set_style('whitegrid')\n",
+    "sc._settings.settings._vector_friendly=False\n",
     "\n",
     "colormap = 'flare'\n",
-    "binding_mode = 'binding_minerva'\n",
-    "dpi = 360"
+    "binding_mode = 'binding_ct'\n",
+    "dpi = 600"
    ]
   },
   {
@@ -461,11 +462,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ir.pl.group_abundance(adata, groupby='donor', target_col='binding_10x', normalize=False)\n",
+    "ir.pl.group_abundance(adata, groupby='donor', target_col='binding_ct', normalize=False)\n",
     "for d in adata.obs['donor'].value_counts().index:\n",
     "    adata_tmp = adata[adata.obs['donor']==d]\n",
     "    print(d)\n",
-    "    print(adata_tmp.obs['binding_10x'].value_counts())"
+    "    print(adata_tmp.obs['binding_ct'].value_counts())"
    ]
   },
   {
@@ -564,7 +565,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "    \n",
-    "for mode in ['binding_minerva', 'binding_10x']:\n",
+    "for mode in ['binding_ct', 'binding_10x']:\n",
     "    plot_binding_distributions(adata, mode, title=f'{mode} - Full Data')\n",
     "    #adata_tmp = adata[adata.obs['sample']!='S2']\n",
     "    #plot_binding_distributions(adata_tmp, mode, title=f'{mode} - wo S2')"
@@ -673,14 +674,12 @@
    },
    "outputs": [],
    "source": [
-    "binding_mode = 'binding_ct'\n",
-    "\n",
     "for donor in adata.obs['donor'].unique():\n",
     "    adata_donor = adata[adata.obs['donor']==donor]\n",
     "    #axes = axes.reshape(-1)\n",
     "    \n",
     "    eps = adata_donor.obs[binding_mode].astype(str).value_counts().index.tolist()\n",
-    "    eps = [el.split('+') for el in eps if (el!='nan')]\n",
+    "    eps = [el.split('+') for el in eps if (el!='nan') and (el!='No binding')]\n",
     "    eps = list(set([el for sublist in eps for el in sublist]))\n",
     "    \n",
     "    ncols = len(eps)\n",
@@ -783,9 +782,7 @@
     "    \n",
     "    plt.tight_layout()\n",
     "    plt.savefig(f'{path_figs}/citeSeq/{c}.png', bbox_inches='tight', dpi=300,)\n",
-    "    plt.show()\n",
-    "    \n",
-    "    "
+    "    plt.show()"
    ]
   },
   {
@@ -956,11 +953,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35a55816",
+   "id": "fd79ef33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "binding_mode = 'binding_ct'"
+    "fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "sc.pl.umap(adata, show=False, ax=ax)\n",
+    "sc.pl.umap(adata[adata.obs[binding_mode]!='No binding'], color='binding_ct', show=False, ax=ax,\n",
+    "          s=50)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -970,12 +972,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "fig, ax = plt.subplots(figsize=(5, 5))\n",
     "sc.pl.umap(adata, show=False, ax=ax)\n",
     "sc.pl.umap(adata[adata.obs[binding_mode]=='LTDEMIAQY'], color='donor', show=False, ax=ax,\n",
-    "          s=75)\n",
+    "          s=50)\n",
     "ax.set_title(f'LTD by donor {binding_mode}')\n",
     "plt.tight_layout()\n",
+    "plt.savefig(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_umap_ltd.pdf', \n",
+    "            bbox_inches='tight', dpi=dpi)\n",
     "plt.show()"
    ]
   },
@@ -998,7 +1002,8 @@
     "df_tmp = df_tmp.loc[donor_order]\n",
     "\n",
     "\n",
-    "df_tmp.plot(kind='bar', stacked=True, color=adata_tmp.uns['leiden_colors'], ax=ax)\n",
+    "df_tmp.plot(kind='bar', stacked=True,# color=adata.uns['leiden_colors'], \n",
+    "            ax=ax)\n",
     "\n",
     "n_cts_by_donor = (df_tmp>0).sum(axis=1)\n",
     "for i, (donor, n) in enumerate(n_cts_by_donor.items()):\n",
@@ -1011,6 +1016,46 @@
     "ax.grid(False)\n",
     "ax.set_ylabel('# Cells')\n",
     "plt.tight_layout()\n",
+    "plt.savefig(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_ltd_clone_expansion.pdf', \n",
+    "            bbox_inches='tight', dpi=dpi)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67f1a0ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "df_tmp = adata[(adata.obs[binding_mode]=='LTDEMIAQY')\n",
+    "              & (adata.obs['clone_id']!='nan')].obs[['donor', 'clone_id']]\n",
+    "df_tmp = df_tmp.groupby('donor')['clone_id'].value_counts().unstack().fillna(0)\n",
+    "\n",
+    "# Ordering the df\n",
+    "stack_order = df_tmp.max(axis=0).sort_values(ascending=False).index\n",
+    "df_tmp = df_tmp[stack_order]\n",
+    "donor_order = df_tmp.sum(axis=1).sort_values().index\n",
+    "df_tmp = df_tmp.loc[donor_order]\n",
+    "\n",
+    "\n",
+    "df_tmp.plot(kind='bar', stacked=True,# color=adata.uns['leiden_colors'], \n",
+    "            ax=ax)\n",
+    "\n",
+    "n_cts_by_donor = (df_tmp>0).sum(axis=1)\n",
+    "for i, (donor, n) in enumerate(n_cts_by_donor.items()):\n",
+    "    ax.text((i+0.5)/len(n_cts_by_donor), 1, f'n={n}', ha='center', \n",
+    "            transform=ax.transAxes)\n",
+    "\n",
+    "\n",
+    "ax.legend().remove()\n",
+    "sb.despine(ax=ax)\n",
+    "ax.grid(False)\n",
+    "ax.set_ylabel('# Cells')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_ltd_clone_expansion_v2.pdf', \n",
+    "            bbox_inches='tight', dpi=dpi)\n",
     "plt.show()"
    ]
   },
@@ -1029,12 +1074,16 @@
     "df_tmp = df_tmp.loc[donor_order]\n",
     "df_tmp.plot(kind='bar', stacked=True, ax=ax)\n",
     "\n",
-    "#ax.legend().remove()\n",
+    "ax.legend(bbox_to_anchor=(1., 0.75), title='Leiden')\n",
     "sb.despine(ax=ax)\n",
     "ax.grid(False)\n",
-    "#ax.set_ylabel('Fraction Leiden')\n",
+    "ax.set_ylabel('Fraction Leiden')\n",
+    "ax.set_title('LTD-specific cells')\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.savefig(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_ltd_over_leiden.pdf', \n",
+    "            bbox_inches='tight', dpi=dpi)\n",
+    "plt.show()\n",
+    "df_tmp.to_csv(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_ltd_over_leiden_nrom.csv')"
    ]
   },
   {
@@ -1048,11 +1097,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b96211c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "sc.pl.umap(adata, color='dpt_pseudotime', ax=ax, show=False)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_umap_pseudotime.pdf', \n",
+    "            bbox_inches='tight', dpi=dpi)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6a35061b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc.pl.umap(adata, color='dpt_pseudotime')\n",
     "sc.pl.violin(adata, groupby='leiden', keys='dpt_pseudotime')"
    ]
   },
@@ -1251,16 +1315,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55d4476a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "binding_mode = 'binding_10x'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "45e4e7dc",
    "metadata": {},
@@ -1276,8 +1330,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = sc.pl.umap(adata, color='leiden', show=False, return_fig=True)\n",
-    "#plt.savefig(f'{path_figs}/paper/2a_umap_leiden.pdf', bbox_inches='tight', dpi=dpi)\n",
+    "sc.settings.vector_friendly = False\n",
+    "fig, ax = plt.subplots(figsize=(5, 5))\n",
+    "sc.pl.umap(adata, color='leiden', show=False, ax=ax)\n",
+    "plt.savefig(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_umap_leiden.pdf', \n",
+    "            bbox_inches='tight', dpi=dpi)\n",
     "plt.show()"
    ]
   },
@@ -1297,7 +1354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def double_histogram_dotplot(adata, n_genes, groupby='leiden'):\n",
+    "def double_histogram_dotplot(adata, n_genes, groupby='leiden', save_name=None):\n",
     "    # This Code is highjacking the parts of functions from scanpy, scipy, and matplotlib. \n",
     "    # If you re-use it, that's between you and your deity.     \n",
     "    import scipy.cluster.hierarchy as sch\n",
@@ -1344,8 +1401,22 @@
     "    plot['mainplot_ax'].set_xticks([el+0.5 for el in range(0, len(top_genes))])\n",
     "    plot['mainplot_ax'].set_xlim([0, len(top_genes)])\n",
     "    _ = plot['mainplot_ax'].set_xticklabels(dendro_info['ivl'])\n",
-    "double_histogram_dotplot(adata, 5, groupby='leiden')\n",
-    "sc.pl.rank_genes_groups_dotplot(adata, n_genes=5, dendrogram=True, key=f'rank_genes_groups_leiden')"
+    "    \n",
+    "    if save_name is not None:\n",
+    "        plt.savefig(f'../../figures/mvp/manuscript/{save_name}.pdf', \n",
+    "                bbox_inches='tight', dpi=dpi)\n",
+    "    plt.show()\n",
+    "    \n",
+    "double_histogram_dotplot(adata, 5, groupby='leiden', \n",
+    "                         save_name=f'{adata.uns[\"celltype\"]}_gex_degs_2dendro')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15, 4))\n",
+    "sc.pl.rank_genes_groups_dotplot(adata, n_genes=5, dendrogram=True, \n",
+    "                                key=f'rank_genes_groups_leiden',\n",
+    "                               ax=ax, show=False)\n",
+    "plt.savefig(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_gex_degs.pdf', \n",
+    "                bbox_inches='tight', dpi=dpi)\n",
+    "plt.show()"
    ]
   },
   {
@@ -1362,7 +1433,17 @@
     "adata_cite.X = sparse.csr_matrix(adata_cite.X)\n",
     "adata_cite.uns.pop('rank_genes_groups_leiden')\n",
     "adata_cite.uns['rank_genes_groups_leiden'] = adata_cite.uns.pop('rank_genes_groups_leiden_cite')\n",
-    "double_histogram_dotplot(adata_cite, 5, groupby='leiden')"
+    "\n",
+    "double_histogram_dotplot(adata_cite, 5, groupby='leiden', \n",
+    "                        save_name=f'{adata.uns[\"celltype\"]}_cite_degs_2dendro')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15, 4))\n",
+    "sc.pl.rank_genes_groups_dotplot(adata_cite, n_genes=5, dendrogram=True, \n",
+    "                                key=f'rank_genes_groups_leiden',\n",
+    "                                ax=ax, show=False)\n",
+    "plt.savefig(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_cite_degs.pdf', \n",
+    "                bbox_inches='tight', dpi=dpi)\n",
+    "plt.show()"
    ]
   },
   {
@@ -1734,50 +1815,10 @@
     "adata_tmp = adata[~adata.obs['clone_id'].isna()]\n",
     "adata_tmp = adata_tmp[adata_tmp.obs['clone_id']!='nan']\n",
     "adata_tmp = adata_tmp[adata_tmp.obs[binding_mode]=='LTDEMIAQY']\n",
-    "plot_diversity(adata_tmp, 'donor', gini, title_suffix='Diversity', plot_type=sb.barplot, ax=ax)\n",
-    "\n",
+    "div_ltd = plot_diversity(adata_tmp, 'donor', gini, title_suffix='Diversity', plot_type=sb.barplot, ax=ax)\n",
+    "div_ltd.to_csv(f'../../figures/mvp/manuscript/{adata.uns[\"celltype\"]}_diversity_gini_ltd.csv')\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1db2b160",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata[adata.obs['clone_id']=='1650.0'].obs['binding_ct']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f333fa8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata[adata.obs['FLRGRAYGL']>50].obs[['clone_id']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e38efdb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata[adata.obs['clone_id'].insin([])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ccddd065",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata[adata.obs['binding_ct']=='LTDEMIAQY'].obs.groupby('donor')['clone_id'].value_counts()"
    ]
   },
   {
@@ -1872,6 +1913,22 @@
     "for gene in genes:\n",
     "    sc.pl.scatter(adata, x='dpt_pseudotime', y=gene, color='leiden', size=15)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46370ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bb23678",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
